# pystarter

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MakeFile  Makefile  README.Docker.md  README.md  README_project.md  TODO.MD  Taskfile.yml  docker-compose.debug.yml  docker-compose.yml  environment.yml  example.env  hello.py  main.py  pyproject.toml  pyproject_base.toml  requirements.txt  setup.py  setup.sh  standardclass.py
.github/workflows/: build.yml  old_build.yml  release.yml
common/: constants.py
data/: DataClass.py
deactivate/: pyvenv.cfg
docs/: README.md  README_project.md
my_package/: __init__.py  my_module.py
package_name/: __init__.py  my_module.py
src/: StandardClass.py  console_helper.py  logging.py  main.py
src/common/: __init__.py  constants.py
src/pystarter/: __init__.py  __main__.py  app.py  version.py
src/pystarter/data_models/: __init__.py  sample_data.py
src/pystarter/utils/: __init__.py  console_helper.py  file_helper.py  logging_factory.py  profiling_helper.py
src/sample_data/: standardclass.py
src/sample_package/: sample_module.py
src/utils/: profiling_helper.py
test/unit/: conftest.py  test_console.py  test_constants.py  test_my_module.py  test_package.py
tests/: test_class.py  test_console.py  test_constants.py  test_package.py  test_sample.py
tests/unit/: conftest.py
utils/: console_helper.py  logging_helper.py  profiling_helper.py
