[tool.poetry]
name = "pystarter"
version = "0.1.0"
description = "a sample python project"
authors = ["A User <auser@someorg.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.7.3"
bandit = "^1.7.10"
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
